Improve circular route detection